# Game

./: CMakeLists.txt  jogador.json
falas/: barman.txt  jovem.txt  mulher.txt  teste.txt  velho.txt
includes/: principal.h
includes/Animator/: Animation.h  Image.h
includes/BackGround/: BackGround.h  Layer.h
includes/Entity/: Ente.h  Entity.h  IDs.h
includes/Levels/: Level.h  fase-1.txt  level-1.h  level-2.h  level-2.txt  vila.h  vila.txt
includes/List/: Element.h  EntityList.h  List.h  ObserverList.h
includes/Manager/: CollisionManager.h  DialogueManager.h  EventManager.h  FileManager.h  GraphicManager.h  MusicManager.h  StateManager.h  camera.h
includes/Observer/: Observer.h  ObserverDialogue.h  ObserverLevel.h  ObserverMenu.h  ObserverPlayer.h
includes/Obstaculo/: Obstaculo.h  Plataforma.h
includes/States/: DialogueState.h  LevelState.h  MenuState.h  State.h
includes/animador/: Animation.h  animacao.h  image.h  imagem.h
includes/arma/: arma.h
includes/botao/: botao.h  botaoTexto.h  botaoVolume.h  texto.h  textoEfeito.h
includes/entidade/: Ente.h  IDs.h  entidade.h
includes/estado/: estado.h
includes/estados/: estado.h  estadoDialogo.h  estadoFase.h  estadoMenu.h
includes/fases/: fase-1.txt  fase-2.txt  fase.h  level-1.h  level-2.h  vila.h  vila.txt
includes/fundo/: camada.h  fundo.h
includes/gerenciador/: camera.h  gerenciadorArquivo.h  gerenciadorDeColisao.h  gerenciadorDeDialogo.h  gerenciadorDeEstado.h  gerenciadorDeEventos.h  gerenciadorDeMusica.h  gerenciadorGrafico.h
saves/: fases.txt
src/: main.cpp  principal.cpp
(+226 files in other folders)
